deploy server: use flavor_id only, add user data
